force-app/main/default/objects/Schindler_Maintenance_Activity__c/Schindler_Maintenance_Activity__c.object-meta.xml
<CustomObject>
    <label>Vendor Activities</label>
    <nameField>
        <label>Vendor Activities</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>