force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Activity_Details__c.field-meta.xml
<CustomField>
    <fullName>Activity_Details__c</fullName>
    <formula>HYPERLINK(&quot;https://auditmate.force.com/customers/s/detail/&quot; + Id,  Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Details</label>
    <type>Text</type>
</CustomField>