force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Arrival_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Arrival_DateTime__c</fullName>
    <label>Arrival</label>
    <type>DateTime</type>
</CustomField>