force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Arrival_time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_time__c</fullName>
    <label>Arrival time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>