force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Call_placed_date__c.field-meta.xml
<CustomField>
    <fullName>Call_placed_date__c</fullName>
    <label>Call placed date</label>
    <type>Date</type>
</CustomField>