force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Call_Placed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Call_Placed_DateTime__c</fullName>
    <label>Call Placed</label>
    <type>DateTime</type>
</CustomField>