force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Call_placed_time__c.field-meta.xml
<CustomField>
    <fullName>Call_placed_time__c</fullName>
    <label>Call placed time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>