force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Caller__c.field-meta.xml
<CustomField>
    <fullName>Caller__c</fullName>
    <label>Caller</label>
    <length>50</length>
    <type>Text</type>
</CustomField>