force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Closed_date__c.field-meta.xml
<CustomField>
    <fullName>Closed_date__c</fullName>
    <label>Departure date</label>
    <type>Date</type>
</CustomField>