force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Closed_time__c.field-meta.xml
<CustomField>
    <fullName>Closed_time__c</fullName>
    <label>Departure time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>