force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/ContractNo__c.field-meta.xml
<CustomField>
    <fullName>ContractNo__c</fullName>
    <label>ContractNo</label>
    <length>14</length>
    <type>Text</type>
</CustomField>