force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Departure_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Departure_DateTime__c</fullName>
    <label>Departure</label>
    <type>DateTime</type>
</CustomField>