force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Dispatched_date__c.field-meta.xml
<CustomField>
    <fullName>Dispatched_date__c</fullName>
    <label>Dispatched date</label>
    <type>Date</type>
</CustomField>