force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Dispatched_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Dispatched_DateTime__c</fullName>
    <label>Dispatched</label>
    <type>DateTime</type>
</CustomField>