force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Dispatched_time__c.field-meta.xml
<CustomField>
    <fullName>Dispatched_time__c</fullName>
    <label>Dispatched time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>