force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <length>30</length>
    <type>Text</type>
</CustomField>