force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Entrapment__c.field-meta.xml
<CustomField>
    <fullName>Entrapment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entrapment</label>
    <type>Checkbox</type>
</CustomField>