force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/EquipName__c.field-meta.xml
<CustomField>
    <fullName>EquipName__c</fullName>
    <inlineHelpText>Equipment name by vendor</inlineHelpText>
    <label>Equipment Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>