force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/EquipNo__c.field-meta.xml
<CustomField>
    <fullName>EquipNo__c</fullName>
    <label>EquipNo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>