force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/EquipStatus__c.field-meta.xml
<CustomField>
    <fullName>EquipStatus__c</fullName>
    <label>EquipStatus</label>
    <length>30</length>
    <type>Text</type>
</CustomField>