force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/JobID__c.field-meta.xml
<CustomField>
    <fullName>JobID__c</fullName>
    <label>JobID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>