force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <length>130</length>
    <type>Text</type>
</CustomField>