force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Maintenance_Duration__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Duration__c</fullName>
    <formula>(Departure_DateTime__c -  Arrival_DateTime__c) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>In minutes</inlineHelpText>
    <label>Maintenance Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>