force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Regular_Hours__c.field-meta.xml
<CustomField>
    <fullName>Regular_Hours__c</fullName>
    <label>Regular Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>