force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>