force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Time__c</fullName>
    <formula>(Arrival_DateTime__c - Call_Placed_DateTime__c ) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>In minutes</inlineHelpText>
    <label>Response Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>