force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Task_Completed__c.field-meta.xml
<CustomField>
    <fullName>Task_Completed__c</fullName>
    <label>Task Completed</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>