force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Technician_Name__c.field-meta.xml
<CustomField>
    <fullName>Technician_Name__c</fullName>
    <label>Technician Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>