force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <label>Ticket #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>