force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Took_Place_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Took_Place_Last_12_Months__c</fullName>
    <formula>VisitDate__c &gt;  (TODAY() - 365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The activity took place on the last 12 months</inlineHelpText>
    <label>Took Place Last 12 Months</label>
    <type>Checkbox</type>
</CustomField>