force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/Vandalism__c.field-meta.xml
<CustomField>
    <fullName>Vandalism__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vandalism</label>
    <type>Checkbox</type>
</CustomField>