force-app/main/default/objects/Schindler_Maintenance_Activity__c/fields/VisitDate__c.field-meta.xml
<CustomField>
    <fullName>VisitDate__c</fullName>
    <label>VisitDate</label>
    <type>Date</type>
</CustomField>