force-app/main/default/objects/Schindler_Maintenance_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VisitDate__c</columns>
    <columns>Type__c</columns>
    <columns>Category__c</columns>
    <columns>Description__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>contains</operation>
        <value>Otis</value>
    </filters>
    <filters>
        <field>Description__c</field>
        <operation>contains</operation>
        <value>cat</value>
    </filters>
    <label>All</label>
</ListView>